# rs-foa-realworld

./: .gitignore  Cargo.toml  README.md  gen-rs.sh
_migrations/: all_down.sql  all_up.sql
src/: arch.rs  bf.rs  fl.rs  lib.rs  sfl.rs
src/arch/: mod.rs  tx.rs  util.rs
src/arch/config/: app_cfg_info.rs  mod.rs
src/arch/crypto/: mod.rs  password_hash.rs
src/arch/di/: cfg_deps.rs  mod.rs
src/arch/util/: slug.rs
src/bf/: article_check_owner_bf.rs  user_authenticate_bf.rs  user_gen_token_bf.rs
src/bf/boot/: mod.rs
src/common/: errors.rs
src/config/: mod.rs
src/daf/: mod.rs
src/model/: article.rs  article_node_list.txt  comment.rs  comment_node_list.txt  favorite.rs  following.rs  mod.rs  tag.rs  user.rs
src/rpc/: article_create_in.rs  article_criteria.rs  article_out.rs  article_update_in.rs  articles_feed_in.rs  comment_add_in.rs  comment_delete_in.rs  comment_out.rs  mod.rs  profile_out.rs  tags_out.rs  user_authenticate_in.rs  user_out.rs  user_register_in.rs  user_update_in.rs
src/sfl/: article_create_sfl.rs  boot.rs  default_sfl_cfg_src.rs
