[package]
name = "rs-foa-realworld"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
slug = "0.1.4"
arcstr = "1.1"
anyhow = "1.0"
argon2 = "0.4"
rand_core = { version = "0.6", features = ["std"] }
arc-swap = "1.6"
once_cell = "1.17"

